@@ -1,3 +1,12 @@
+2000-10-27  Philip Blundell  <philb@gnu.org>
+
+	* elf32-arm.h (elf32_arm_copy_private_bfd_data): Don't refuse
+	attempts to mix PIC code with non-PIC, just mark the output as
+	being position dependent.
+	(elf32_arm_merge_private_bfd_data): Likewise.  Print an error 
+	message for EF_SOFT_FLOAT mismatches.  Display diagnostics for 
+	all mismatches, not just the first one.
+	
 2000-10-23  Philip Blundell  <pb@futuretv.com>
 
 	From 2000-05-23  H.J. Lu  <hjl@gnu.org>
